fixed name dropdown overlapping of the search bar in both readings of languages.

--- a/src/amo/components/Header/styles.scss
+++ b/src/amo/components/Header/styles.scss
@@ -239,11 +239,16 @@
     max-width: 250px;
   }
 
+  @include respond-to(large) {
+    grid-row: 2 / 3;
+  }
+
   @include respond-to(extraLarge) {
     align-self: center;
     margin: 0;
     max-width: 284px;
     width: 100%;
+    grid-row: 3 / 3;
   }
 
   &.Header-search-form--desktop {
